Fixed that overflowing input issue for the mobile set

--- a/static/stylesheets/style.scss
+++ b/static/stylesheets/style.scss
@@ -152,7 +152,7 @@ ul#pastes {
       width: 100%;
       margin: 0 auto;
     }
-    .form-line #input { width: 100%; float: left; }
+    .form-line #input { width: 98%; float: left; }
     .form-line .cupid-green {
       display: block;
       position: relative;
